improved mechanism of groups + targeting